
class Sender:
    """
    The Sender interface declares the update method, used by platafrom.
    """
    def __init__(self):
        pass

    def update(self):
        """
        Receive update.
        """
        pass